lib/tests/fixtures/compiler/parser/return_in_resource_defaults.baseline
Error: return_in_resource_defaults.pp:3:26: return statement cannot be used inside a resource defaults expression.
  bar => if true { return }
                   ^~~~~~
