lib/tests/fixtures/compiler/parser/return_in_resource_defaults.pp
function foo {
    File {
        bar => if true { return }
    }
}
